--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -276,3 +276,23 @@ body {
         font-size: 50px;
     }
 }
+
+// PugWall
+.pugwall {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    display: table;
+}
+
+.pugwall-row {
+    display: table-row;
+}
+
+.pugwall-image {
+    display: table-cell;
+    background-color: lightgray;
+    background-size: cover;
+    height: 400px;
+    width: 400px;
+}
