--- a/app/views/pages/web_project.html.erb
+++ b/app/views/pages/web_project.html.erb
@@ -13,6 +13,7 @@
         <li><%= link_to "ColorBox", colorbox_path %></li>
         <li><%= link_to "Scroll", scroll_path %></li>
         <li><%= link_to "RoundTimer", roundtimer_path %></li>
+        <li><%= link_to "PugWall", pugwall_path %></li>
         <!--<li><%= %></li>-->
 
     </ul>
