--- a/app/views/pages/pugwall.html.erb
+++ b/app/views/pages/pugwall.html.erb
@@ -1,6 +1,26 @@
-<% provide(:title, "Pugs") %>
+<% provide(:title, "PugWall") %>
 <script>
-	var images = ["KpStx7i.jpg", "jkA2tR2.jpg", "TR38mI2.jpg", "WzVreJB.jpg", "te5kba0.jpg", "feCcPrG.jpg", "yne9FoZ.jpg", "qpL69a9.jpg", "9rf99A7", "VbTb37Q.jpg", "bEbIx9y.jpg", "0h63ZAQ.jpg", "EYBaL8x.jpg", "XrUhnoV.jpg", "1kA40nH.gif", "EYJHmG7.gif", "TkZb2ok.gif", "fBrG5ZE.gif", "AJqYins.gif", "nqUa0Us.gif", "nh9w76o.gif"];
+	var images = [	"KpStx7i.jpg", 
+					"jkA2tR2.jpg", 
+					"TR38mI2.jpg", 
+					"WzVreJB.jpg", 
+					"te5kbaO.jpg", 
+					"feCcPrG.jpg", 
+					"yne9FoZ.jpg", 
+					"qpL69a9.jpg", 
+					"9rf99A7.jpg", 
+					"VbTb37Q.jpg", 
+					"bEbIx9y.jpg", 
+					"0h63ZAQ.jpg", 
+					"EYBaL8x.jpg", 
+					"XrUhnoV.jpg", 
+					"1kA4OnH.gif", 
+					"EYJHmG7.gif", 
+					"TkZb2ok.gif", 
+					"fBrG5ZE.gif", 
+					"AJqYins.gif", 
+					"nqUa0Us.gif", 
+					"nh9w76o.gif"];
 
 	var initialBackground = ["dvZVVIA.png","S8PpSIr.png", "E6FYoDG.png", "dw0mSlr.png", "1mq0Dmf.png", "2KpS97D.png", "Mb7Tz9b.png", "6PL0nLi.png", "JMKztxn.png"]
 
