Sitting Disease: fix syntax of links on page

--- a/app/views/pages/sittingdisease.html.erb
+++ b/app/views/pages/sittingdisease.html.erb
@@ -61,7 +61,7 @@ function formatTime(time){
 function main(){
 	$('#standing').on('click',stand);
 	$('#sitting').on('click',sit);
-	$('.standing-information').attr('href',(Math.random()>0.5?"http://apps.washingtonpost.com/g/page/national/the-health-hazards-of-sitting/750/)":"https://www.youtube.com/watch?v=dQw4w9WgXcQ"));
+	$('.standing-information').attr('href',(Math.random()>0.5?"http://apps.washingtonpost.com/g/page/national/the-health-hazards-of-sitting/750/":"https://www.youtube.com/watch?v=dQw4w9WgXcQ"));
 }
 
 $(document).ready(main);
