Change title name for Sitting Disease

--- a/app/views/pages/sittingdisease.html.erb
+++ b/app/views/pages/sittingdisease.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "Overlay") %>
+<% provide(:title, "Sitting Disease Tracker") %>
 <script>
 var sittingCount = 	0;
 var standingCount = 0;
