Add horseracing to web project index

--- a/app/views/pages/web_project.html.erb
+++ b/app/views/pages/web_project.html.erb
@@ -15,6 +15,7 @@
         <li><%= link_to "RoundTimer", roundtimer_path %></li>
         <li><%= link_to "PugWall", pugwall_path %></li>
         <li><%= link_to "Sitting Disease", sittingdisease_path %></li>
+        <li><%= link_to "Horse Racing", horseracing_path %></li>
         <!--<li><%= %></li>-->
 
     </ul>
